# WinNative-Cleanup

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cleaner.rs  main.rs  rules.rs  scanner.rs  tui.rs
