[package]
name = "windows-cleanup-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
rayon = "1.8"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sysinfo = "0.30"
colored = "2.0"
human_bytes = "0.4"
powershell_script = "1.1"
regex = "1.10"
ratatui = "0.26"
crossterm = "0.27"
sha2 = "0.10"
